--- a/plan-review/assets/css/style.css
+++ b/plan-review/assets/css/style.css
@@ -295,6 +295,10 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
+.container.checkbox {
+  padding: 0;
+}
+
 /* Charts */
 #chartContainerParent {
   height: 100%;
